; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/freetype/src/tools/extr_test_bbox.c_dump_outline.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/freetype/src/tools/extr_test_bbox.c_dump_outline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [30 x i8] c"cbox = [%.2f %.2f %.2f %.2f]\0A\00", align 1
@.str.1 = private unnamed_addr constant [30 x i8] c"bbox = [%.2f %.2f %.2f %.2f]\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @dump_outline to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dump_outline(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_4__, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @FT_Outline_Get_CBox(i32* %4, %struct.TYPE_4__* %3)
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 3
  %7 = load i32, i32* %6, align 4
  %8 = call double @XVAL(i32 %7)
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = call double @XVAL(i32 %10)
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call double @XVAL(i32 %13)
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call double @XVAL(i32 %16)
  %18 = call i32 @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), double %8, double %11, double %14, double %17)
  %19 = load i32*, i32** %2, align 8
  %20 = call i32 @FT_Outline_Get_BBox(i32* %19, %struct.TYPE_4__* %3)
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 3
  %22 = load i32, i32* %21, align 4
  %23 = call double @XVAL(i32 %22)
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = call double @XVAL(i32 %25)
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = call double @XVAL(i32 %28)
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call double @XVAL(i32 %31)
  %33 = call i32 @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), double %23, double %26, double %29, double %32)
  ret void
}

declare dso_local i32 @FT_Outline_Get_CBox(i32*, %struct.TYPE_4__*) #1

declare dso_local i32 @printf(i8*, double, double, double, double) #1

declare dso_local double @XVAL(i32) #1

declare dso_local i32 @FT_Outline_Get_BBox(i32*, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
